Fix documentation.
